src/objects/Competitor_CQP__c.object
<CustomObject>
    <description>R3 List Competitors records created under a CQP Quote</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5-2348. Created as a hidden field to match the Opportunity Competitors against Quote Competitors for filtering purpose.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor CQP</relationshipLabel>
        <relationshipName>Competitor_CQP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Code__c</fullName>
        <description>R3</description>
        <label>Competitor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>R3</description>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <description>R3 Related quote to the competitor</description>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Competitor CQP</relationshipLabel>
        <relationshipName>Competitor_CQP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Competitor CQP</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CQPCom-{00000000}</displayFormat>
        <label>Competitor CQP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor CQP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>